#25 add endpoint blackhawk
